Improved Path support
And optimized imports