@@ -2,7 +2,6 @@ package com.samrj.devil.model;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * @author Samuel Johnson (SmashMaster)
@@ -27,7 +26,7 @@ public class Texture extends DataBlock
                 String str = bImage.getField("name").asString();
                 if (str.startsWith("//")) //Only support relative paths.
                 {
-                    relativePath = Paths.get(str.substring(2)).normalize();
+                    relativePath = Path.of(str.substring(2)).normalize();
                     path = model.path.getParent().resolve(relativePath).normalize();
                     break FIND_PATH;
                 }
